--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vue-i18n": "^8.11.2",
+    "vue-particles": "^1.0.9",
+    "v-charts": "^1.19.0",
+    "screenfull": "^4.2.0",
+    "echarts": "^4.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
@@ -19,10 +24,13 @@
     "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "axios": "^0.19.0",
+    "bootstrap": "^3.3.0",
     "babel-eslint": "^10.0.1",
     "clonedeep": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.1.0",
     "js-cookie": "^2.2.1",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
