--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
     "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "axios": "^0.19.0",
-    "bootstrap": "^3.3.0",
     "babel-eslint": "^10.0.1",
+    "bootstrap": "^3.3.0",
     "clonedeep": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0",
     "js-cookie": "^2.2.1",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "mockjs": "^1.0.1-beta3",
+    "moment": "^2.24.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
